Fix keyboard spacing

--- a/src/styles/global/_main.scss
+++ b/src/styles/global/_main.scss
@@ -14,4 +14,10 @@ $success: $gewis-green !default;
 body {
   font-family: "Lato", "Arial", sans-serif !important;
   font-weight: 400;
+  user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
+
